fix Java 8 incompatible List.of() usage